--- a/ansible/tasks/packages.yml
+++ b/ansible/tasks/packages.yml
@@ -1,7 +1,7 @@
 #!/usr/bin/env ansible-playbook
 ---
 - name: update apt packages
-  hosts: hypriot
+  hosts: model-b
   any_errors_fatal: true
   tasks:
   - apt:
@@ -23,3 +23,4 @@
       - "rsync"
       - "screen"
       - "tree"
+      - "git"
