--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -4,4 +4,4 @@
 - import_playbook: tasks/ntp.yml
 - import_playbook: tasks/packages.yml
 - import_playbook: tasks/nfs.yml
-# - import_playbook: tasks/upgrade_packages.yml
+- import_playbook: tasks/upgrade_packages.yml
