--- a/ansible/tasks/pin_docker-ce.yml
+++ b/ansible/tasks/pin_docker-ce.yml
@@ -2,6 +2,6 @@
 ---
 - name: Pin Docker-CE to version 18.06.1-ce due to upstream problems
   gather_facts: False
-  hosts: bp2
+  hosts: model-b
   tasks:
   - script: ../files/pin_docker-ce.sh  creates=/root/consoled.txt
